# simple_shell

./: .gitignore  AUTHORS  CMakeLists.txt  README.md  built-ins.c  custom_funcs.c  getline.c  helpers.c  hsh.c  main.c  main.h
test/: CMakeLists.txt  README.md  test_myshell.cc  test_myshell.h  test_myshell_cd.cc  test_myshell_errormsg.cc  test_myshell_exitcode.cc  test_myshell_noenv.cc  test_myshell_output.cc
